# home_server_personal_site

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/instructions/: default instructions.instructions.md
scripts/: backup_sqlite_to_s3.py
src/personal_site/: __init__.py  activity_log.py  ai.py  ai_models.py  app.py  caffeine.py  caffeine_models.py  chat.py  config.py  db.py  logs.py  mcp_server.py  notify.py  nutrition.py  nutrition_models.py  preferences.py  preferences_models.py  reports.py  security.py  sleep.py  sleep_models.py  stats.py  stats_queries.py  tz.py  workouts.py  workouts_models.py
src/personal_site/static/: manifest.json  sw.js
src/personal_site/static/css/: site.css
src/personal_site/static/js/: site.js
src/personal_site/templates/: base.html  caffeine.html  caffeine_edit.html  chat.html  home.html  index.html  logs.html  nutrition.html  nutrition_edit_ingredient.html  nutrition_edit_log.html  nutrition_edit_meal.html  nutrition_ingredients.html  nutrition_meals.html  preferences.html  sleep.html  sleep_edit.html  stats.html  stats_nutrition.html  stats_pickleball.html  stats_sleep.html  stats_workouts.html  workouts.html  workouts_base.html  workouts_entry_delete.html  workouts_entry_edit.html  workouts_type_delete.html  workouts_type_edit.html  workouts_type_new.html
src/personal_site/templates/email/: weekly_report.html
src/personal_site/templates/partials/: caffeine_entry_response.html  caffeine_recent_list.html  chat_message.html  (+16 more)
tests/: test_ai_sleep_caffeine.py
